--- a/Angular/20200609/NestedNGuards/src/app/app.component.html
+++ b/Angular/20200609/NestedNGuards/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-store-records></app-store-records>
+<nav class="nav justify-content-left">
+    <a class="nav-link" routerLink="/store">Store Records</a>
+    <a class="nav-link" routerLink="/guardpage">Guard</a>
+    <a class="nav-link" routerLink="/resolve">Resolve</a>
+</nav>
+
+<router-outlet></router-outlet>
