--- a/Angular/20200713/AngularMaterial/src/app/modal-form/modal-form.component.html
+++ b/Angular/20200713/AngularMaterial/src/app/modal-form/modal-form.component.html
@@ -37,7 +37,12 @@
   </div>
   <div>
     
-        <button mat-raised-button type="reset" color="primary" class="Update-btn" (click)="OnSubmit()">Save</button>
+        <button mat-raised-button 
+                type="reset" 
+                color="primary" 
+                class="Update-btn" 
+                (click)="OnSubmit()"
+                [disabled]="!formGroup.valid || !formGroup.touched">Save</button>
         &nbsp;
          <button mat-raised-button type="button" class="Discard-btn" (click)="closeDialog()">Cancel</button>
       </div>
